--- a/moody_morning/pubspec.yaml
+++ b/moody_morning/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.0.2 <4.0.0'
 
 dependencies:
+  camera: ^0.10.5+2
   flutter:
     sdk: flutter
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
