--- a/moody_morning/pubspec.yaml
+++ b/moody_morning/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.0.2 <4.0.0'
 
 dependencies:
+  alarm: ^1.0.5
   camera: ^0.10.5+2
   flutter:
     sdk: flutter
@@ -22,3 +23,4 @@ flutter:
 
   assets:
     - assets/images/logoFull.png
+    - assets/sounds/galaxy_alarm.mp3
