--- a/moody_morning/pubspec.yaml
+++ b/moody_morning/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   camera: ^0.10.5+2
   flutter:
     sdk: flutter
+  mobile_scanner: ^3.2.0
+  qr_code_scanner: ^1.0.1
 qr_code_scanner: ^1.0.1
 
 dev_dependencies:
