--- a/moody_morning/pubspec.yaml
+++ b/moody_morning/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   sensors_plus: ^3.0.2
   qr_code_scanner: ^1.0.1
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
