tried fixing notifications

--- a/moody_morning/pubspec.yaml
+++ b/moody_morning/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^2.13.1
   flutter_local_notifications: ^14.1.1
   firebase_messaging: ^14.6.2
+  firebase_analytics: ^10.4.3
 
 dev_dependencies:
   flutter_test:
