--- a/moody_morning/pubspec.yaml
+++ b/moody_morning/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.0.2 <4.0.0'
 
 dependencies:
+  math_expressions: ^2.4.0
   alarm: ^1.0.5
   camera: ^0.10.5+2
   flutter:
@@ -14,6 +15,7 @@ dependencies:
   sensors_plus: ^3.0.2
   qr_code_scanner: ^1.0.1
   provider: ^6.0.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +28,4 @@ flutter:
   assets:
     - assets/images/logoFull.png
     - assets/sounds/galaxy_alarm.mp3
+
