Added const in files + fixed time display

--- a/moody_morning/pubspec.yaml
+++ b/moody_morning/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_messaging: ^14.6.2
   firebase_analytics: ^10.4.3
   permission_handler: ^10.3.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
