--- a/moody_morning/pubspec.yaml
+++ b/moody_morning/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_local_notifications: ^14.1.1
   permission_handler: ^10.3.0
   intl: ^0.17.0
+  dcdg: ^4.1.0
 
 dev_dependencies:
   flutter_test:
