changed app name

--- a/moody_morning/android/app/src/main/AndroidManifest.xml
+++ b/moody_morning/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         <package android:name="com.example.moody_morning" />
     </queries>
     <application
-        android:label="moody_morning"
+        android:label="MoodyMorning"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <service
