changed app icon

--- a/moody_morning/android/app/src/main/AndroidManifest.xml
+++ b/moody_morning/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:label="MoodyMorning"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <service
             android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmService"
             android:permission="android.permission.BIND_JOB_SERVICE"
