--- a/moody_morning/pubspec.yaml
+++ b/moody_morning/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   permission_handler: ^10.3.0
   intl: ^0.17.0
   localstorage: ^4.0.0+1
+  volume_controller: ^2.0.7
 
 dev_dependencies:
   flutter_test:
